# audio-switcher

./: Cargo.toml
.github/workflows/: release.yml
src/: app.rs  audio.rs  main.rs  settings.rs  settings_window.rs  tray.rs
src/audio/: linux.rs  mod.rs  windows.rs
src/hotkey/: linux.rs  mod.rs  windows.rs
src/settings_window/: linux.rs  mod.rs  windows.rs
src/toast/: linux.rs  mod.rs  windows.rs
src/tray/: linux.rs  mod.rs  windows.rs
