[package]
name = "audio-switcher"
version = "0.1.0"
edition = "2024"

# This prevents a console window from appearing on Windows when you run the app.
# Comment this out while developing so you can see println! output.
# [[bin]]
# name = "audio-switcher"
# path = "src/main.rs"

[dependencies]
tray-icon = "0.21.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "implement",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }


# When you're ready to ship without a console window, uncomment this:
# [profile.release]
# [target.'cfg(windows)']
# rustflags = ["-Clink-args=/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup"]