[package]
name = "audio-switcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tray-icon = "0.21.3"
eframe = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
strum = "0.28.0"
strum_macros = "0.28.0"
image = "0.25.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "implement",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
] }
